i18n/fr/docusaurus-plugin-content-docs/version-24.10/api/graph-views-map-api.md
---
id: map-api
title: API MAP
description: "Automatiser la création et la maintenance des cartes standard via l'API"
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Si vous souhaitez automatiser la création ou la maintenance de cartes standard, vous pouvez utiliser l'API de Centreon MAP.

> Veuillez noter que les endpoints spécifiés dans cette page ont été mis à jour suite à la dépréciation de la version bêta. Depuis la version 24.10, `beta` est remplacé par `latest` dans les chemins d'accès.

## Permissions

Avec cette API, vous pouvez créer / mettre à jour / supprimer des cartes standard. Pour pouvoir utiliser l'API, le compte que vous utilisez doit avoir l'un des privilèges suivants :

- Un compte Centreon Admin.
- Les droits de création de carte et de modification sur les cartes que vous souhaitez mettre à jour / supprimer.

## Comment utiliser l'API de Centreon MAP

> Parce que l'API de Centreon MAP n'est pas évidente à utiliser, voici un scénario pour s'authentifier, puis créer une carte et y ajouter une "shape".

### S'authentifier

<Tabs groupId="httpMode" queryString>
<TabItem value="HTTP" label="HTTP">

```
POST : http://serverURL:8081/centreon-map/api/latest/auth/sign-in
```

</TabItem>

<TabItem value="HTTPS" label="HTTPS">

```
POST : https://serverURL:9443/centreon-map/api/latest/auth/sign-in
```

</TabItem>
</Tabs>

```
Headers {
    Content-Type = application/json
    X-Client-Version = 24.10.0
}

Body {
    "login" : "admin"
    "password" : "denied"
}
```

- Dans le résultat, récupérez le **jwtToken**. Vous devrez l'utiliser pour tous vos appels à l'API. Les headers ressembleront à ceci :

```
Headers {
    Content-Type = application/json
    X-client-version = 24.10.0
    Authorization = Bearer \{jwtToken\}
}
```

### Créer une carte

<Tabs groupId="httpMode" queryString>
<TabItem value="HTTP" label="HTTP">

```
POST http://serverURL:8081/centreon-map/api/latest/maps
```

</TabItem>

<TabItem value="HTTPS" label="HTTPS">

```
POST https://serverURL:9443/centreon-map/api/latest/maps
```

</TabItem>
</Tabs>

```
Headers {
    Content-Type = application/json
    X-client-version =  24.10.0
    Authorization = Bearer \{jwtToken\}
}

Body {
      "name": "My new map created from API"
   }
```

- Récupérez les identifiants de la carte (mapId) et de la vue (viewId) renvoyés.

### Ouvrir la carte

<Tabs groupId="httpMode" queryString>
<TabItem value="HTTP" label="HTTP">
    
```
GET http://serverURL:8081/centreon-map/api/latest/maps/_mapId_/views/_viewId_
```

</TabItem>

<TabItem value="HTTPS" label="HTTPS">

```
GET https://serverURL:9443/centreon-map/api/latest/maps/_mapId_/views/_viewId_
```

</TabItem>
</Tabs>

### Créer et attacher un élément "shape" à la carte ouverte

Dans ce scénario, l'élément "shape" est un rectangle.

<Tabs groupId="httpMode" queryString>
<TabItem value="HTTP" label="HTTP">
    
```
PUT http://serverURL:8081/centreon-map/api/latest/maps/_mapId_/views
```

</TabItem>

<TabItem value="HTTPS" label="HTTPS">

```
PUT https://serverURL:9443/centreon-map/api/latest/maps/_mapId_/views
```

</TabItem>
</Tabs>

```
Body: {
 "id": \{viewId\},
 "shapes": [
     {
        "type": "RECTANGLE",
        "graphics": {
             "label": "FR - Rectangle",
             "x": 120,
             "y": 120,
             "width": 130,
             "height": 53,
             "color": "#0096FF",
             "thickness": 1,
             "borderColor": "#F0F0F0",
             "line": "SOLID"
         }
      }
   ]
}
```

## Pour plus d'informations

> Suivez ce [lien](https://docs-api.centreon.com/api/centreon-map/24.10/) pour accéder à la documentation de l'API Centreon et avoir un aperçu des fonctionnalités de l'API.
